fix(GlListbox): Dark scrim in dark mode
Also fix shadow colors

--- a/src/scss/utility-mixins/box-shadow.scss
+++ b/src/scss/utility-mixins/box-shadow.scss
@@ -200,13 +200,13 @@
 */
 
 @mixin gl-shadow-sm {
-  box-shadow: 0 1px 2px rgba($gray-950, 0.1);
+  box-shadow: 0 1px 2px $t-gray-a-08;
 }
 
 @mixin gl-shadow-md {
-  box-shadow: 0 2px 8px rgba($gray-950, 0.16), 0 0 2px rgba($gray-950, 0.16);
+  box-shadow: 0 2px 8px $t-gray-a-16, 0 0 2px $t-gray-a-16;
 }
 
 @mixin gl-shadow-lg {
-  box-shadow: 0 4px 12px rgba($gray-950, 0.16), 0 0 4px rgba($gray-950, 0.16);
+  box-shadow: 0 4px 12px $t-gray-a-16, 0 0 4px $t-gray-a-16;
 }
